--- a/wheely/src/App.css
+++ b/wheely/src/App.css
@@ -1,38 +1,45 @@
-.App {
-  text-align: center;
+li:first-child {
+  background-color: blue;
+  transform: rotate(0deg) skewY(-60deg);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+li:nth-child(2) {
+  background-color: green;
+  transform: rotate(51.42deg) skewY(-60deg);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li:nth-child(3) {
+  background-color: red;
+  transform: rotate(102.84deg) skewY(-60deg);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+li:nth-child(4) {
+  background-color: violet;
+  transform: rotate(154.26deg) skewY(-60deg);
 }
 
-.App-link {
-  color: #61dafb;
+li:nth-child(5) {
+  background-color: purple;
+  transform: rotate(205.68deg) skewY(-60deg);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+li:nth-child(6) {
+  background-color: yellow;
+  transform: rotate(257.1deg) skewY(-60deg);
+}
+
+li:nth-child(7) {
+  background-color: brown;
+  transform: rotate(308.52deg) skewY(-60deg);
+}
+
+.HeroCircle {
+  list-style-type: none;
+  overflow: hidden;
+  width: 25em;
+  height: 25em;
+  border: 1px solid black;
+  padding: 0;
+  margin: 1em auto;
+  border-radius: 50%;
 }
